--- a/Part 1. HTML & CSS/Quest 02. Hello, CSS/skeletons/layout1.css
+++ b/Part 1. HTML & CSS/Quest 02. Hello, CSS/skeletons/layout1.css
@@ -11,9 +11,17 @@ body {
 aside {
 	background-color: pink;
 	/* TODO: 이 곳을 채우세요! */
+	width: 200px;
+	height: 100%;
+	overflow: scroll;
 }
 
 .main {
 	background-color: skyblue;
 	/* TODO: 이 곳을 채우세요! */
+	position: absolute;
+	left: 200px;
+	top: 0px;
+	height: 100%;
+	overflow: scroll;
 }
