--- a/Part 1. HTML & CSS/Quest 02. Hello, CSS/skeletons/layout2.css
+++ b/Part 1. HTML & CSS/Quest 02. Hello, CSS/skeletons/layout2.css
@@ -11,14 +11,26 @@ body {
 .main {
 	background-color: skyblue;
 	/* TODO: 이 곳을 채우세요! */
+	position: absolute;
+	height: 100%;
+	top: 0px;
+	left: 200px;
+	right: 300px;
 }
 
 .left {
 	background-color: pink;
 	/* TODO: 이 곳을 채우세요! */
+	width: 200px;
+	height: 100%
 }
 
 .right {
 	background-color: greenyellow;
 	/* TODO: 이 곳을 채우세요! */
+	position: absolute;
+	width: 300px;
+	height: 100%;
+	right: 0px;
+	top: 0px;
 }
