--- a/Part 1. HTML & CSS/Quest 02. Hello, CSS/skeletons/layout2.css
+++ b/Part 1. HTML & CSS/Quest 02. Hello, CSS/skeletons/layout2.css
@@ -16,13 +16,15 @@ body {
 	top: 0px;
 	left: 200px;
 	right: 300px;
+	overflow: scroll;
 }
 
 .left {
 	background-color: pink;
 	/* TODO: 이 곳을 채우세요! */
 	width: 200px;
-	height: 100%
+	height: 100%;
+	overflow: scroll;
 }
 
 .right {
@@ -33,4 +35,5 @@ body {
 	height: 100%;
 	right: 0px;
 	top: 0px;
+	overflow: scroll;
 }
