--- a/Part 1. HTML & CSS/Quest 02. Hello, CSS/skeletons/layout3.css
+++ b/Part 1. HTML & CSS/Quest 02. Hello, CSS/skeletons/layout3.css
@@ -10,29 +10,59 @@ body {
 
 .contents {
 	/* TODO: 이 곳을 채우세요! */
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	top: 0px;
+	box-sizing: border-box;
+	border-bottom: 50px solid white;
 }
 
 .main {
 	background-color: skyblue;
 	/* TODO: 이 곳을 채우세요! */
+	position: absolute;
+	top: 0px;
+	right: 300px;
+	left: 200px;
+	height: inherit;
+	overflow: scroll;
 }
 
 .main header {
 	background-color: lightgray;
 	/* TODO: 이 곳을 채우세요! */
+	position: relative;
+	height: 30px;
+	top: 0px;
+	overflow: scroll;
 }
 
 .left {
 	background-color: pink;
 	/* TODO: 이 곳을 채우세요! */
+	position: absolute;
+	width: 200px;
+	height: inherit;
+	overflow: scroll;
 }
 
 .right {
 	background-color: greenyellow;
 	/* TODO: 이 곳을 채우세요! */
+	position: absolute;
+	width: 300px;
+	height: inherit;
+	right: 0;
+	top: 0;
+	overflow: scroll;
 }
 
 footer {
 	background-color: yellow;
 	/* TODO: 이 곳을 채우세요! */
+	position: absolute;
+	width: 100%;
+	height: 50px;
+	bottom: 0px;
 }
