--- a/Part 1. HTML & CSS/Quest 02. Hello, CSS/skeletons/layout3.css
+++ b/Part 1. HTML & CSS/Quest 02. Hello, CSS/skeletons/layout3.css
@@ -25,7 +25,7 @@ body {
 	top: 0px;
 	right: 300px;
 	left: 200px;
-	height: inherit;
+	height: 100%;
 	overflow: scroll;
 }
 
@@ -34,7 +34,6 @@ body {
 	/* TODO: 이 곳을 채우세요! */
 	position: relative;
 	height: 30px;
-	top: 0px;
 	overflow: scroll;
 }
 
@@ -43,7 +42,7 @@ body {
 	/* TODO: 이 곳을 채우세요! */
 	position: absolute;
 	width: 200px;
-	height: inherit;
+	height: 100%;
 	overflow: scroll;
 }
 
@@ -52,7 +51,7 @@ body {
 	/* TODO: 이 곳을 채우세요! */
 	position: absolute;
 	width: 300px;
-	height: inherit;
+	height: 100%;
 	right: 0;
 	top: 0;
 	overflow: scroll;
