--- a/Part 1. HTML & CSS/Quest 02. Hello, CSS/skeletons/layout3.css
+++ b/Part 1. HTML & CSS/Quest 02. Hello, CSS/skeletons/layout3.css
@@ -11,8 +11,7 @@ body {
 .contents {
 	/* TODO: 이 곳을 채우세요! */
 	position: absolute;
-	width: 100%;
-	height: 100%;
+	width: 100%; height: 100%;
 	top: 0px;
 	box-sizing: border-box;
 	border-bottom: 50px solid white;
@@ -41,8 +40,7 @@ body {
 	background-color: pink;
 	/* TODO: 이 곳을 채우세요! */
 	position: absolute;
-	width: 200px;
-	height: 100%;
+	width: 200px; height: 100%;
 	overflow: scroll;
 }
 
@@ -50,8 +48,7 @@ body {
 	background-color: greenyellow;
 	/* TODO: 이 곳을 채우세요! */
 	position: absolute;
-	width: 300px;
-	height: 100%;
+	width: 300px; height: 100%;
 	right: 0;
 	top: 0;
 	overflow: scroll;
@@ -61,7 +58,6 @@ footer {
 	background-color: yellow;
 	/* TODO: 이 곳을 채우세요! */
 	position: absolute;
-	width: 100%;
-	height: 50px;
+	width: 100%; height: 50px;
 	bottom: 0px;
 }
