--- a/Part 1. HTML & CSS/Quest 02. Hello, CSS/skeletons/layout4.css
+++ b/Part 1. HTML & CSS/Quest 02. Hello, CSS/skeletons/layout4.css
@@ -10,29 +10,52 @@ body {
 
 .contents {
 	/* TODO: 이 곳을 채우세요! */
+	position: absolute;
+	display: flex;
+	width: 100%;
+	height: 100%;
+	top: 0px;
+	box-sizing: border-box;
+	border-bottom: 50px solid white;
+	flex-flow: row nowrap;
 }
 
 .main {
 	background-color: skyblue;
 	/* TODO: 이 곳을 채우세요! */
+	display: flex;
+	flex: 1;
+	flex-direction: column;
+	-ms-flex-direction: column;
+	overflow: scroll;
 }
 
 .main header {
 	background-color: lightgray;
 	/* TODO: 이 곳을 채우세요! */
+	height: 30px;
+	overflow: scroll;
 }
 
 .left {
 	background-color: pink;
 	/* TODO: 이 곳을 채우세요! */
+	width: 200px;
+	height: 100%;
+	overflow: scroll;
 }
 
 .right {
 	background-color: greenyellow;
 	/* TODO: 이 곳을 채우세요! */
+	width: 300px;
+	overflow: scroll;
 }
 
 footer {
+	position: absolute;
 	background-color: yellow;
 	/* TODO: 이 곳을 채우세요! */
+	width: 100%; height: 50px;
+	bottom: 0px;
 }
