--- a/Part 1. HTML & CSS/Quest 02. Hello, CSS/skeletons/layout4.css
+++ b/Part 1. HTML & CSS/Quest 02. Hello, CSS/skeletons/layout4.css
@@ -10,10 +10,9 @@ body {
 
 .contents {
 	/* TODO: 이 곳을 채우세요! */
-	position: absolute;
+	/* position: absolute; */
 	display: flex;
-	width: 100%;
-	height: 100%;
+	width: 100%; height: 100%;
 	top: 0px;
 	box-sizing: border-box;
 	border-bottom: 50px solid white;
