--- a/Part 1. HTML & CSS/Quest 02. Hello, CSS/skeletons/layout4.css
+++ b/Part 1. HTML & CSS/Quest 02. Hello, CSS/skeletons/layout4.css
@@ -10,7 +10,7 @@ body {
 
 .contents {
 	/* TODO: 이 곳을 채우세요! */
-	/* position: absolute; */
+	position: absolute;
 	display: flex;
 	width: 100%; height: 100%;
 	top: 0px;
@@ -22,7 +22,6 @@ body {
 .main {
 	background-color: skyblue;
 	/* TODO: 이 곳을 채우세요! */
-	display: flex;
 	flex: 1;
 	flex-direction: column;
 	-ms-flex-direction: column;
