--- a/Part 1. HTML & CSS/Quest 03. Publishing CSS/skeleton/skeleton.css
+++ b/Part 1. HTML & CSS/Quest 03. Publishing CSS/skeleton/skeleton.css
@@ -4,10 +4,15 @@
 
 html {
 	/* TODO: 어떤 코드가 들어가야 할까요? */
+	font-family: sans-serif;
 }
 
 body {
 	/* TODO: 어떤 코드가 들어가야 할까요? */
+	position: absolute;
+	width: 100%; height: 100%;
+	min-width: 1020px;
+	margin: 0;
 }
 
 /* TODO: 또 어떤 코드들이 들어가야 할까요? */
