--- a/Part 1. HTML & CSS/Quest 02. Hello, CSS/skeletons/layout3.css
+++ b/Part 1. HTML & CSS/Quest 02. Hello, CSS/skeletons/layout3.css
@@ -11,10 +11,12 @@ body {
 .contents {
 	/* TODO: 이 곳을 채우세요! */
 	position: absolute;
-	width: 100%; height: 100%;
+	width: 100%;
+	/* height: 100%;*/
 	top: 0px;
 	box-sizing: border-box;
-	border-bottom: 50px solid white;
+	bottom: 50px;
+	/*border-bottom: 50px solid white;*/
 }
 
 .main {
