--- a/Part 1. HTML & CSS/Quest 03. Publishing CSS/skeleton/skeleton.css
+++ b/Part 1. HTML & CSS/Quest 03. Publishing CSS/skeleton/skeleton.css
@@ -73,9 +73,11 @@ h1 {
 }
 .buttons {
 	background: linear-gradient(to bottom, #fafbfc 0%, #eff3f6 90%);
-
 }
 
+a.message-color{
+	color: #596068;
+}
 /* header start */
 #header{
 	background-color: black;
@@ -265,15 +267,11 @@ section{
 #user {
 	color: black;
 }
-#commit-message{
-	color: #596068;
-}
 #files-left a{
-	padding-left: 8px;
+	padding-left: 10px;
 }
 #files-right {
 	padding-right: 8px;
-	color: #596068;
 }
 
 #file-list {
@@ -283,16 +281,30 @@ section{
 	padding: 0;
 }
 #file-list table{
-	width: 100%;
+	width: 1020px;
 }
-#file-list tr:nth-child(n){
-	display: block;
-	width: 100%;
+#file-list li:nth-child(n){
+	width: 100%; height:40px;
 	margin-right:2px;
+	line-height: 40px;
 	border-bottom: 1px solid #e2e4e8;
 }
-#file-list tr:last-child {
+#file-list li:last-child {
 	border-bottom: 0px;
+}
+.data-raw {
+	display: grid;
+	grid-template-columns: 200px auto 100px;
+}
+.data-raw div:first-child {
+	padding-left: 10px;
+}
+.data-raw div:nth-child(2) {
+	text-align: center;
+}
+.data-raw div:last-child{
+	padding-right: 10px;
+	text-align: end;
 }
 /* file-viewer start */
 #file-viewer {
