--- a/Part 2. JavaScript/Quest 06. JavaScript OOP - Design/skeleton/desktop.css
+++ b/Part 2. JavaScript/Quest 06. JavaScript OOP - Design/skeleton/desktop.css
@@ -1,1 +1,8 @@
 /* TODO: 자유롭게 바탕화면 시스템의 CSS를 만들어 보세요! */
+body{
+    width: 100%; height: 100%;
+}
+.box{
+    width: 200px; height:200px;
+    background-color: black;
+}
