--- a/Part 2. JavaScript/Quest 07. JavaScript OOP - Practice/skeleton/desktop.css
+++ b/Part 2. JavaScript/Quest 07. JavaScript OOP - Practice/skeleton/desktop.css
@@ -9,8 +9,8 @@ html{
 }
 body{
     width: 100%; height: 100%;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+    /* display: grid;
+    grid-template-columns: 1fr 1fr; */
 }
 .desktop{
     /* position: relative; */
