--- a/Part 2. JavaScript/Quest 08. Midterm project/project/midterm.css
+++ b/Part 2. JavaScript/Quest 08. Midterm project/project/midterm.css
@@ -9,3 +9,30 @@ html {
 body {
     width: 100%; height: 100%;
 }
+
+.app {
+    display: grid;
+    width: 1000px; height: 100%;
+    border: 1px solid black;
+    margin: 0 auto;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 4fr;
+    grid-template-areas: 
+        "plans add"
+        "plans results";
+}
+
+.add-area{
+    grid-area: add;
+    border: 1px solid black;
+}
+
+.plans-area{
+    grid-area: plans;
+    border: 1px solid black;
+} 
+
+.results-area{
+    grid-area: results;
+    border: 1px solid black;
+}
