--- a/Part 2. JavaScript/Quest 08. Midterm project/project/midterm.css
+++ b/Part 2. JavaScript/Quest 08. Midterm project/project/midterm.css
@@ -1,6 +1,7 @@
 * {
     margin: 0; padding: 0;
     box-sizing: border-box;
+    font-size: 20px;
 }
 html {
     width: 100%; height: 100%;
@@ -10,29 +11,72 @@ body {
     width: 100%; height: 100%;
 }
 
+/* app css */
 .app {
     display: grid;
     width: 1000px; height: 100%;
     border: 1px solid black;
     margin: 0 auto;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 4fr;
+    grid-template-rows: 1fr 6fr;
     grid-template-areas: 
         "plans add"
         "plans results";
 }
-
+.button {
+    width: 100px;
+    height: 40px;
+    margin: 5px 5px;
+}
+/* add button area css */
 .add-area{
     grid-area: add;
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    margin: 7px 10px;
     border: 1px solid black;
 }
-
+.name-tag-area{
+    display: flex;
+    width: 100%;
+    justify-content: space-around;
+}
+.name{
+    width: 300px;
+    margin: 10px 0;
+    min-height: 20px;
+}
+.tag{
+    width: 150px;
+    margin: 10px 0;
+    min-height: 20px;
+}
+.add-buttons-area {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+/* plans area css */
 .plans-area{
     grid-area: plans;
+    position: relative;
+    margin: 7px 10px;
     border: 1px solid black;
 } 
-
+.plans-contents-area {
+    overflow: scroll;
+}
+.plans-buttons-area {
+    width: 100%;
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    bottom: 7px;
+}
+/* results area css */
 .results-area{
     grid-area: results;
+    margin: 7px 10px;
     border: 1px solid black;
 }
