--- a/Part 2. JavaScript/Quest 08. Midterm project/project/midterm.css
+++ b/Part 2. JavaScript/Quest 08. Midterm project/project/midterm.css
@@ -66,8 +66,7 @@ body {
 .plans-contents-area {
     position: relative;
     width: 100%; height: calc(100% - 60px);
-    overflow-x: hidden;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 .plans-buttons-area {
@@ -103,17 +102,22 @@ div.tag {
 .plan-buttons-area {
     display: flex;
     height: 30%;
-    justify-content: space-between;
+    justify-content: space-between; 
 }
-.plan-clock-area,span {
+.clock-area {
     height: 40%;
     text-align: center;
     font-size: 40px;
-
 }
 /* results area css */
 .results-area{
     grid-area: results;
+    position: relative;
     margin: 7px 10px;
     border: 1px solid black;
+}
+.total {
+    width: 100%; height: 40px;
+    position: absolute;
+    bottom: 7px;
 }
