--- a/Part 3. node.js/Quest 12. AJAX/skeleton/client/style.css
+++ b/Part 3. node.js/Quest 12. AJAX/skeleton/client/style.css
@@ -1,3 +1,16 @@
 * {
 	/* TODO: 필요한 CSS를 채워넣어 보세요! */
+	width: 100%; height: 100%;
+	margin: 0;
+	padding: 0;
+	font-size: 10px;
+	box-sizing: border-box;
+}
+
+html{
+	width: 100%; height: 100%;
+}
+
+body{
+	width: 100%; height: 100%;
 }
