--- a/Part 3. node.js/Quest 12. AJAX/skeleton/client/style.css
+++ b/Part 3. node.js/Quest 12. AJAX/skeleton/client/style.css
@@ -1,6 +1,5 @@
 * {
 	/* TODO: 필요한 CSS를 채워넣어 보세요! */
-	width: 100%; height: 100%;
 	margin: 0;
 	padding: 0;
 	font-size: 10px;
@@ -13,4 +12,54 @@ html{
 
 body{
 	width: 100%; height: 100%;
+}
+ul {
+	list-style: none;
+}
+li {
+	width: 80px; height: 80px;
+}
+/* app */
+.app{
+	display: grid;
+	width: 100%; height: 100%;
+	grid-template-columns: 80px 1fr;
+	grid-template-rows: 60px 1fr;
+	grid-template-areas: 
+		"menubar tabs"
+		"menubar content";
+}
+/* menubar */
+.menubar{
+	width: 100%; height: 100%;
+	background-color: red;
+	grid-area: menubar;
+}
+.flex{
+	display: flex;
+	flex-direction: column;
+}
+input[type="file"] {
+	width: 1px;
+	height: 1px;
+}
+button {
+	display: block;
+	width: 80px; height: 80px;
+}
+/* tabs */
+.tabs{
+	width: 100%; height: 100%;
+	background-color: blue;
+	grid-area: tabs;
+}
+/* tab */
+.tab{
+
+}
+/* content */
+.content{
+	width: 100%; height: 100%;
+	background-color: green;
+	grid-area: content;
 }
