--- a/Part 3. node.js/Quest 12. AJAX/skeleton/client/style.css
+++ b/Part 3. node.js/Quest 12. AJAX/skeleton/client/style.css
@@ -68,11 +68,11 @@ button {
 	display: block;
 	width: 80px; height: 80px;
 }
-button:hover{
+button:hover {
 	cursor: pointer;
 }
 /* tabs */
-.tabs{
+.tabs {
 	position: relative;
 	width: 100%; height: 100%;
 	background-color: blue;
@@ -81,17 +81,32 @@ button:hover{
 	overflow: hidden;
 }
 /* tab */
-.tab{
+.tab {
+	display: flex;
 	width: 10%; height: 60px;
 	text-align: center;
-	line-height: 60px;
 	background-color: #f3f3f3;
 	border: 0;
 	border-right: 1px solid #000000;
 	border-top: 1px solid #000000;
+	justify-content: center;
 }
-.tab:active{
+.tab-name{
+	display: block;
+	line-height: 60px;
+	font-size: 15px;
+}
+.focus {
 	background-color: #bababa;
+}
+.close {
+	width: 16px; height: 16px;
+	margin-top: 20px;
+	margin-left: 3px;
+}
+.close:active {
+	border-radius: 3px;
+	background-color: #000000;
 }
 /* content */
 .content{
