--- a/Part 3. node.js/Quest 13. Session and Login/skeleton/client/style.css
+++ b/Part 3. node.js/Quest 13. Session and Login/skeleton/client/style.css
@@ -1,3 +1,122 @@
 * {
 	/* TODO: 필요한 CSS를 채워넣어 보세요! */
+	margin: 0;
+	padding: 0;
+	font-size: 10px;
+	box-sizing: border-box;
+}
+
+html{
+	width: 100%; height: 100%;
+}
+
+body{
+	width: 100%; height: 100%;
+}
+ul {
+	list-style: none;
+}
+li {
+	width: 80px; height: 80px;
+}
+/* app */
+.app{
+	display: grid;
+	width: 100%; height: 100%;
+	grid-template-columns: 80px 1fr;
+	grid-template-rows: 60px 1fr;
+	grid-template-areas: 
+		"menubar tabs"
+		"menubar content";
+}
+/* menubar */
+.menubar{
+	width: 100%; height: 100%;
+	grid-area: menubar;
+}
+.flex{
+	display: flex;
+	flex-direction: column;
+}
+input[type="file"] {
+	position: absolute;
+	width: 1px;
+	height: 1px;
+	padding: 0;
+	margin: -1px;
+	overflow: hidden;
+	clip: rect(0, 0, 0, 0);
+	border: 0;
+}
+label{
+	display: inline-block; 
+	width: 100%; height: 100%;
+	padding: .5em .75em; 
+	color: #000000; 
+	font-size: inherit; 
+	line-height: 70px; 
+	text-align: center;
+	background-color: #f3f3f3; 
+	cursor: pointer; 
+	border: 1px solid #afafaf; 
+}
+label:active{
+	background-color: #bababa;
+}
+button {
+	display: block;
+	width: 80px; height: 80px;
+}
+button:hover {
+	cursor: pointer;
+}
+/* tabs */
+.tabs {
+	position: relative;
+	width: 100%; height: 100%;
+	grid-area: tabs;
+	display: flex;
+	overflow: hidden;
+}
+/* tab */
+.tab {
+	display: flex;
+	width: 10%; height: 60px;
+	text-align: center;
+	background-color: #f3f3f3;
+	border: 0;
+	border-right: 1px solid #000000;
+	border-top: 1px solid #000000;
+	justify-content: center;
+}
+.tab-name{
+	display: block;
+	line-height: 60px;
+	font-size: 15px;
+}
+.focus {
+	background-color: #bababa;
+}
+.close {
+	width: 16px; height: 16px;
+	margin-top: 20px;
+	margin-left: 3px;
+}
+.close:active {
+	border-radius: 3px;
+	background-color: #000000;
+}
+/* content */
+.content{
+	width: 100%; height: 100%;
+	grid-area: content;
+}
+.write-space{
+	width: 100%; height: 100%;
+	outline: none;
+	font-size: 16px;
+	resize: none;
+}
+.invisible{
+	display: none;
 }
