--- a/Part 3. node.js/Quest 12. AJAX/skeleton/client/style.css
+++ b/Part 3. node.js/Quest 12. AJAX/skeleton/client/style.css
@@ -71,12 +71,22 @@ button:hover {
 	cursor: pointer;
 }
 /* tabs */
+.tabs-area{
+	display: flex;
+	width: 100%; height: 100%;
+	grid-area: tabs;
+	justify-content: space-between;
+}
 .tabs {
 	position: relative;
 	width: 100%; height: 100%;
-	grid-area: tabs;
 	display: flex;
 	overflow: hidden;
+}
+.login-check {
+	width: 120px; height: 60px;
+	text-align: center;
+	line-height: 60px;
 }
 /* tab */
 .tab {
@@ -107,16 +117,23 @@ button:hover {
 	background-color: #000000;
 }
 /* content */
-.content{
+.content {
 	width: 100%; height: 100%;
 	grid-area: content;
 }
-.write-space{
+.write-space {
 	width: 100%; height: 100%;
 	outline: none;
 	font-size: 16px;
 	resize: none;
 }
-.invisible{
+.invisible {
 	display: none;
+}
+
+/* login */
+.login-form {
+	position: absolute;
+	width: 300px; height: 150px;
+	
 }
