--- a/Part 3. node.js/Quest 13. Session and Login/skeleton/client/style.css
+++ b/Part 3. node.js/Quest 13. Session and Login/skeleton/client/style.css
@@ -134,6 +134,34 @@ button:hover {
 /* login */
 .login-form {
 	position: absolute;
+	top: 60px;
+	left: 80px;
 	width: 300px; height: 150px;
 	border: 1px solid #000000;
+}
+form {
+	width: 100%; height: 100%;
+}
+.login-table {
+	display: grid;
+	width: 100%; height: 100%;
+	grid-template-columns: 1fr 2fr;
+	grid-template-rows: 1fr 1fr 1fr;
+}
+.login-table>span {
+	display: block;
+	font-size: 20px;
+	text-align: center;
+	line-height: 50px;
+}
+.login-table>input {
+	margin: 8px 0;
+}
+.submit-area {
+	position: relative;
+}
+.submit {
+	position: absolute;
+	width: 70px; height: 50px;
+	left: 10px;
 }
