--- a/Part 3. node.js/Quest 13. Session and Login/skeleton/client/style.css
+++ b/Part 3. node.js/Quest 13. Session and Login/skeleton/client/style.css
@@ -127,6 +127,9 @@ button:hover {
 	font-size: 16px;
 	resize: none;
 }
+.write-space:read-only {
+	cursor: default;
+}
 .invisible {
 	display: none;
 }
@@ -138,9 +141,6 @@ button:hover {
 	left: 80px;
 	width: 300px; height: 150px;
 	border: 1px solid #000000;
-}
-form {
-	width: 100%; height: 100%;
 }
 .login-table {
 	display: grid;
@@ -154,14 +154,14 @@ form {
 	text-align: center;
 	line-height: 50px;
 }
-.login-table>input {
-	margin: 8px 0;
+.input {
+	margin: 8px 2px;
 }
 .submit-area {
 	position: relative;
 }
 .submit {
 	position: absolute;
-	width: 70px; height: 50px;
-	left: 10px;
+	width: 70px; height: 30px;
+	top: 10px; right: 10px;
 }
